--- a/about us.html
+++ b/about us.html
@@ -14,7 +14,9 @@
         </header>
         <main>
             <h1>Наша дружная команда</h1>
-            <p>Не вызывает сомнений, что выбранный нами инновационный путь создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Прежде всего реализация намеченных плановых заданий в значительной степени обуславливает создание системы массового участия. Значимость этих проблем настолько очевидна, что повышение уровня гражданского сознания обеспечивает широкому кругу специалистов поставленных обществом и правительством задач.</p>
+            <p>Не вызывает сомнений, что выбранный нами инновационный путь создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий.
+            Прежде всего реализация намеченных плановых заданий в значительной степени обуславливает создание системы массового участия. Значимость этих проблем настолько
+            очевидна, что повышение уровня гражданского сознания обеспечивает широкому кругу специалистов поставленных обществом и правительством задач.</p>
         </main>
     </div>
     <footer>
