--- a/about us.html
+++ b/about us.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>aboutus</title>
 </head>
 <body>
     
     <div id="wrapper">
         <header>
-            сайт визитка
+            Сайт визитка
         </header>
         <main>
             <h1>Наша дружная команда</h1>
