--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
     
     <div id="wrapper">
         <header>
-            сайт визитка
+            Сайт визитка
         </header>
         <main>
             <img src="./img/copy1.jpg" class="main__img--float" alt="" >
-            <h1>Компанич мечты</h1>
-            <p>Не следует, однако, забывать, что социально-экономическое развитие требует определения и уточнения системы массового участия.</p>
+            <h1>Компания мечты</h1>
+            <p>Разнообразный и богатый опыт выбранный нами инновационный путь создаёт предпосылки качественно новых шагов для системы обучения кадров, соответствующей насущным потребностям. Следует отметить, что новая модель организационной деятельности способствует подготовке и реализации существующий финансовых и административных условий. Таким образом дальнейшее развитие различных форм деятельности создаёт предпосылки качественно новых шагов для новых принципов формирования материально-технической и кадровой базы.</p>
         </main>
     </div>
     <footer>
         &copy; Новая компания
-        
     </footer>
-
 </body>
 </html>
