--- a/uslugi.html
+++ b/uslugi.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>uslugi</title>
 </head>
 <body>
     
     <div id="wrapper">
         <header>
-            сайт визитка
+            Сайт визитка
         </header>
-        <div id="panorama"> </div>
+        <div id="panorama">
         <main>
-            <section class="servies clearfix">
+            <section class="serviсes clearfix">
                 <article class="services_item"> 
                     <img src="./content/tokyo_3.jpg" alt="" class="services__img">
-                    <h1>Услуга #1</h1>
+                    <h2>Услуга #1</h2>
                     <p>С другой стороны консультация с широким активом в значительной степени обуславливает 
                         создание системы обучения кадров, соответствующей насущным потребностям.«Подробнее…»</p>
                 </article>
@@ -31,19 +31,17 @@
                 <article class="services_item ">
                     <img src="./content/tokyo_5.jpg" alt="" class="services__img">
 
-                    <h3>Услуга #3</h3>
+                    <h2>Услуга #3</h2>
                     <p>С другой стороны консультация с широким активом в значительной степени обуславливает 
                         создание системы обучения кадров, соответствующей насущным потребностям.«Подробнее…»</p>
                 </article>
-                
-
             </section>
-            <h4 class = "h1—invisible">«Услуги компании»</h4>
+            <h1 class = "h1—invisible">«Услуги компании»</h1>
         </main>
+        </div>
     </div>
     <footer>
         &copy; Новая компания
-    </footer>
-
+    </footer>   
 </body>
 </html>
